# data-service-sdk

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
data_service_sdk/: __init__.py
docs/: index.md
docs/architecture/: repo-structure.md
docs/getting-started/: overview.md
docs/handlers/: input.md  output.md  state-machine-examples.md  subscription.md  utils.md
docs/reference/: types.md
docs/testing/: coverage.md
docs/utils/: expression.md  timeseries.md
docs/worker/: config.md  deployment.md  state-and-offset.md
framework/: types.py
framework/handlers/input/: expression.py  factory.py  input_controller_type.py  state_machine.py
framework/handlers/output/: api_controller.py  factory.py  kafka_controller.py  manager.py  tsdb_controller.py  type.py
framework/handlers/subscription/: factory.py  manager.py  type.py
framework/handlers/utils/: db_handler.py  kafka_handler.py  mqtt_handler.py
framework/utils/: expression.py  redis_timeseries.py  timeseries.py  timeseries_manager.py
framework/worker/: base_worker.py
tests/: conftest.py  test_db_handler.py  test_expression_and_state_machine.py  test_input_factory_and_controller.py  test_kafka_handler.py  test_mqtt_handler.py  test_output_controllers.py  test_output_factory_and_manager.py  test_protocol_coverage.py  test_redis_timeseries.py  test_subscription_factory_and_manager.py  test_timeseries.py  test_timeseries_manager.py  test_worker_utils.py
(+3 files in other folders)
